<?xml version="1.0"?>
<package>
  <name>dlite_sim</name>
  <version>0.2.4</version>
  <description>
    Simulation of d* lite in ROS stage
  </description>

  <maintainer email="lzyang@caltech.edu">Gary Yang</maintainer>

  <license>BSD</license>

  <author>Gary Yang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>fake_localization</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>stage_ros</run_depend>
  <run_depend>rospy</run_depend>

</package>
